Brick libs no longer exported.

--- a/code/.classpath
+++ b/code/.classpath
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/xpp3_min-1.1.4c.jar"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/prevayler-2.3.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/xstream-1.3.1.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/skin/main/dashboard/impl/lib/jxlayer.jar" sourcepath="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/hardware/cpu/lang/impl/lib/commons-lang-2.4.jar" sourcepath="bricks/src/sneer/hardware/cpu/lang/impl/lib/commons-lang-2.4.zip"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/hardware/io/impl/lib/commons-io-1.4.jar" sourcepath="bricks/src/sneer/hardware/io/lib/commons-io-1.4-src.zip"/>
-	<classpathentry exported="true" kind="lib" path="src/sneer/bricks/hardware/ram/collections/impl/lib/commons-collections-3.2.1.jar" sourcepath="bricks/src/sneer/hardware/ram/collections/impl/lib/commons-collections-3.2.1-src.zip"/>
-	<classpathentry kind="lib" path="src/sneer/bricks/pulp/crypto/impl/lib/bcprov-jdk16-139.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/asm-all-3.1.jar"/>
 	<classpathentry kind="lib" path="lib/javassist.jar"/>
-	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/hamcrest-core-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/hamcrest-library-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/jmock-2.5.1.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/jmock-junit4-2.5.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="src/sneer/bricks/software/code/compilers/java/impl/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/junit-4.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-2.5.1/hamcrest-core-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-2.5.1/hamcrest-library-1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-2.5.1/jmock-2.5.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/jmock-2.5.1/jmock-junit4-2.5.1.jar"/>
 	<classpathentry kind="lib" path="src/sneer/bricks/snapps/whisper/speex/impl/lib/speex.jar"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/software/code/compilers/java/impl/lib/compiler-7-ea-b17-02_aug_2007.jar"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/prevayler-2.3.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/prevayler-2.3-src.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/pulp/tuples/impl/lib/xstream-1.3.1.jar" sourcepath="bricks/src/sneer/pulp/tuples/impl/lib/xstream-1.3.1-src.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/skin/main/dashboard/impl/lib/jxlayer.jar" sourcepath="bricks/src/sneer/skin/main/dashboard/impl/lib/jxlayer-src.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/hardware/cpu/lang/impl/lib/commons-lang-2.4.jar" sourcepath="bricks/src/sneer/hardware/cpu/lang/impl/lib/commons-lang-2.4.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/hardware/io/impl/lib/commons-io-1.4.jar" sourcepath="bricks/src/sneer/hardware/io/lib/commons-io-1.4-src.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/hardware/ram/collections/impl/lib/commons-collections-3.2.1.jar" sourcepath="bricks/src/sneer/hardware/ram/collections/impl/lib/commons-collections-3.2.1-src.zip"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/pulp/crypto/impl/lib/bcprov-jdk16-139.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
