--- a/spikes/.classpath
+++ b/spikes/.classpath
@@ -9,6 +9,10 @@
 	<classpathentry kind="lib" path="lib/junit-4.4.jar"/>
 	<classpathentry kind="lib" path="lib/javassist.jar"/>
 	<classpathentry kind="lib" path="lib/asm-all-3.1.jar"/>
+	<classpathentry kind="lib" path="lib/prevayler-2.3.jar"/>
+	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/sneer"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
