--- a/code/platform/.classpath
+++ b/code/platform/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="src/sneer/bricks/pulp/serialization/impl/lib/xstream-1.3.1.jar" sourcepath="src/sneer/bricks/pulp/serialization/impl/lib/xstream-1.3.1-src.zip"/>
 	<classpathentry kind="lib" path="src/sneer/bricks/software/code/metaclass/asm/impl/lib/asm-all-3.1.jar"/>
 	<classpathentry kind="lib" path="src/sneer/bricks/software/diff/impl/lib/diff_match_patch.jar"/>
+	<classpathentry kind="lib" path="src/sneer/bricks/software/timing/impl/lib/TimingFramework-1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
